Tue 12 Nov 2019 Aleksey
	* correctly align UTF8 file paths, while printing verification results
	* respect UTF8 BOM when updating or verifying a hash file

Thu 17 Oct 2019 Aleksey
	* print a new-line after ed2k link, when --ed2k-link option is passed

Mon 14 Oct 2019 Aleksey
	* exit on output errors with exit_code = 2
	* change option --update=<file> to update the specified file

Sun 29 Sep 2019 Aleksey
	* make short option '-P' to be an alias for --percents

Tue 02 Jul 2019 Aleksey
	* change %{mtime} format to 'YYYY-MM-DD hh:mm:ss'

Wed 26 Jun 2019 Aleksey
	* Bugfix: --sysconfdir was ignored while searching for config on Linux

Tue 25 Jun 2019 Aleksey
	* support verification of base64-formated hash sums
	* add formatting options: --hex, --base32, -b/--base64

Mon 17 Jun 2019 Aleksey
	* Bugfix: properly handle symlinks on the command line

Mon 04 Feb 2019 Aleksey
	* === Version 1.3.8 ===

Wed Jan 30 2019 Aleksey
	* rename Windows encoding options: --ansi to --win, --oem to --dos

Mon Jan 28 2019 Aleksey
	* support GOST R 34.11-2012 hash function
	* changed the short option `-G' to be alias of --gost12-256
	* changed printf format token `%g' to be alias of %{gost12-256}

Sat Dec 22 2018 Aleksey
	* === Version 1.3.7 ===
	* new option `--message==<string>' to calculate a hash for string
	* changed magnet link short option from '-m' to '-g'

Sat Sep 29 2018 Aleksey
	* Bugfix: `--file-list=-' shall read a file list from stdin

Tue Sep 11 2018 Aleksey
	* CRC32C hash function supported, option --crc32c
	* speedup CRC32 hash function

Wed Mar 14 2018 Aleksey
	* === Version 1.3.6 ===
	* support --file-list option

Sun Mar 11 2018 And Sch
	* librhash: speedup sha3

Sun Feb 18 2018 Aleksey
	* Bugfix: fix --follow option
	
Mon Jan 29 2018 J. Peter Mugaas
	* better MSYS and CygWin support

Fri Jan 26 2018 Aleksey
	* configuration script

Mon Sep  4 2017 Aleksey
	* Bugfix: broken binary hash output

Mon Aug 28 2017 Aleksey
	* Bugfix: fix running on WinXP

Mon Aug 14 2017 Aleksey